# GUI_3d

./: CMakeLists.txt  README.md
libs/camera_pos/: CMakeLists.txt
libs/camera_pos/include/: vec2.h  vec3.h
libs/camera_pos/include/camera_solver/: intersection_solver.h  intrisic_camera_solver.h
libs/camera_pos/include/containers/: vector.h
libs/camera_pos/include/geometry/: intersect_line_plane.h  projectUnprojectPoint.h
libs/camera_pos/include/matrix/: Euler_angles.h  matrix.h
libs/camera_pos/include/polynominals/: numerical_root_finder.h  polynominals.h
libs/camera_pos/include/slay_solver/: slay_defs.h
libs/camera_pos/include/unproject/: unproject.h
libs/camera_pos/src/: vec2.c  vec3.c
libs/camera_pos/src/camera_solver/: intersection_solver.c
libs/camera_pos/src/containers/: vector.c
libs/camera_pos/src/geometry/: intersect_line_plane.c
libs/camera_pos/src/matrix/: Euler_angles.c  matrix.c  singular_value_decomposition.c
libs/camera_pos/src/polynominals/: numerical_root_finder.c  polynominals.c
libs/camera_pos/src/slay_solver/: slay_gauss.cpp
libs/camera_pos/src/unproject/: unproject.c
resources/: background.png~  key.json
src/: Context_menu.h  Main_all.h  main.cpp  ray_collision.h  rtsp_menu.h  unprojectPlaneMenu.h
src/GUI/: Button_controller.c  Button_controller.h  Main_defs.h  Menus.c  Menus.h  camera.c  camera.h  canvas.c  canvas.h  canvas3d.c  canvas3d.h
src/GUI/button/: button.c  button.h
src/GUI/canvas/: mathGL.c  mathGL.h  okplatform.h  shader.c  shader.h  window.c  window.h
src/GUI/canvas/font/: Font.c  Font.h
src/GUI/canvas/font/font/: DataIO.h  Font_Atlas.c  Font_Atlas.h  Font_Glyph.c  Font_Glyph.h  Font_Settings.c  Font_Settings.h  Font_font.c  Font_font.h  Font_main.c  Font_main.h  dataIO.c  stb_truetype.h
src/GUI/canvas/glad/: glad.c  glad.h
src/GUI/data_structures/: map.c
src/GUI/objects/: Object3d.c  Object3d.h
src/gizmo/: tiny-gizmo.cpp
